# instant-grep

./: .env.example  .gitignore  .ignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
.claude/: settings.local.json
.claude/memory/: project_state.md
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: ig.rb
benchmarks/: REPORT.md  RESULTS.md  benchmark.sh  index.html
docs/: BRAIN.md
docs/specs/: SPEC-daemon-cache-invalidation.md  SPEC-ide-tracker.md
documentation/: astro.config.mjs  components.json  package.json
documentation/public/: robots.txt
filters/: ansible.toml  aws-extended.toml  black.toml  build-tools.toml  bun-test.toml  cargo-audit.toml  cargo.toml  cloud.toml  cypress.toml  docker.toml  dotnet.toml  eslint-json.toml  frontend.toml  gh-workflow.toml  gh.toml  git-extras.toml  go-test.toml  go.toml  helm.toml  infra-tools.toml  jest.toml  js.toml  kubectl.toml  lint-tools.toml  net-tools.toml  nx.toml  pest.toml  phpunit.toml  pkg-extra.toml  playwright.toml  pnpm.toml  poetry.toml  python.toml  rspec.toml  ruby.toml  ruff-extended.toml  sysinfo.toml  system.toml  terraform.toml  turbo.toml  (+2 more)
hooks/: brain-capture.sh  brain-inject.sh  brain-session.sh  cursorrules-snippet.txt  find-rewrite.sh  format.sh  ig-guard.sh  ig-rewrite.sh  prefer-ig.sh  session-start.sh  subagent-context.sh
plugins/: ig-auto-index.zsh  ig-daemon.30s.sh
shim/: .gitignore  Makefile  ig.c  parse.h  test_argv.c  test_djb2.c  test_fallback.c  test_fallback_paths.c  test_io.c  test_json.c  test_root.c
src/: autoignore.rs  brain.rs  cache.rs  cli.rs  config.rs  context.rs  daemon.rs  delta.rs  discover.rs  embed_toggle.rs  gain.rs  git.rs  ide_tracker.rs  ls.rs  main.rs  pack.rs  read.rs  rewrite.rs  runner.rs  scoring.rs  setup.rs  smart.rs  symbols.rs  tee.rs  tracking.rs  trust.rs  uninstall.rs  update.rs  util.rs  verify.rs  walk.rs  watch.rs
src/analytics/: economics.rs  learn.rs  mod.rs  session.rs
src/cmds/: deps.rs  diff_cmd.rs  docker.rs  env_cmd.rs  err.rs  json_cmd.rs  mod.rs  run.rs  test_runner.rs
src/embed_poc/: chunk.rs  config.rs  mod.rs  openai.rs  search.rs  server.rs  store.rs
src/filter/: loader.rs  mod.rs  pipeline.rs
src/hooks/: copilot.rs
src/index/: filedata.rs  merge.rs  metadata.rs  mod.rs  ngram.rs  overlay.rs  postings.rs  reader.rs  seal.rs  spimi.rs  trigram.rs  vbyte.rs  writer.rs
src/output/: printer.rs
src/query/: extract.rs  mod.rs  plan.rs
src/search/: fallback.rs  indexed.rs  matcher.rs  mod.rs  rank.rs
src/semantic/: cooccur.rs  mod.rs  tokenize.rs
tests/: claude_harness.sh  e2e_review_fixes.rs  filter_goldens.rs  ig_integration.sh  ig_integration_part2.sh  ig_integration_part3.sh  repro_bugs.sh
tests/filter_goldens/: jest.cmd  jest.expected  jest.raw  kubectl-get-pods.cmd  (+10 more)
ui/: package.json  vite.config.ts
(+31 files in other folders)
