[package]
name = "instant-grep"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ig"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
termcolor = "1"
anyhow = "1"
atty = "0.2"
notify = "6"
ctrlc = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
