[package]
name = "instant-grep"
version = "1.4.0"
edition = "2024"
description = "Trigram-indexed regex search CLI — sub-ms code search for AI agents"
license = "MIT"
repository = "https://github.com/MakFly/instant-grep"
homepage = "https://github.com/MakFly/instant-grep"
keywords = ["grep", "search", "trigram", "index", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ig"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
bincode = "1.3"
termcolor = "1"
anyhow = "1"
notify = "6"
ctrlc = "3"
libc = "0.2"
dirs = "5"
ureq = { version = "3", features = ["json"] }
clap_complete = "4"
tempfile = "3"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
