[package]
name = "instant-grep"
version = "1.19.2"
edition = "2024"
description = "Trigram-indexed regex search CLI — sub-ms code search for AI agents"
license = "MIT"
repository = "https://github.com/MakFly/instant-grep"
homepage = "https://instant-grep.pulseview.app"
documentation = "https://instant-grep.pulseview.app/docs/getting-started"
keywords = ["grep", "search", "code-search", "ai-agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ig"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
regex-syntax = "0.8"
memchr = "2"
memmap2 = "0.9"
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
bincode = "1.3"
termcolor = "1"
anyhow = "1"
notify = "6"
ctrlc = "3"
libc = "0.2"
dirs = "5"
ureq = { version = "3", features = ["json"] }
clap_complete = "4"
tempfile = "3"
toml = "0.8"
sha2 = "0.10"
walkdir = "2"
lru = "0.12"
tiny_http = { version = "0.12", optional = true }

[features]
# Embedding POC (OpenAI semantic search). OFF by default — requires an OpenAI
# API key. Fallback for users without it: regular `ig search` (trigram).
# Enable with: cargo build --release --features embed-poc
default = []
embed-poc = ["dep:tiny_http"]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
